--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,175 @@
-# you shouldn't commit these into source control
-# these are the default directory names, adjust/add to fit your needs
-target/
-dbt_packages/
-logs/
+version: 2
+
+models:
+  - name: orders
+    description: "Details of orders placed"
+    columns:
+      - name: order_id
+        description: "Unique identifier for the order"
+      - name: user_id
+        description: "Identifier for the user who placed the order"
+      - name: status
+        description: "Current status of the order"
+      - name: created_at
+        description: "Timestamp when the order was created"
+      - name: returned_at
+        description: "Timestamp when the order was returned"
+      - name: shipped_at
+        description: "Timestamp when the order was shipped"
+      - name: delivered_at
+        description: "Timestamp when the order was delivered"
+      - name: num_of_item
+        description: "Number of items in the order"
+
+  - name: users
+    description: "Information about users"
+    columns:
+      - name: id
+        description: "Unique identifier for the user"
+      - name: first_name
+        description: "First name of the user"
+      - name: last_name
+        description: "Last name of the user"
+      - name: email
+        description: "Email address of the user"
+      - name: age
+        description: "Age of the user"
+      - name: gender
+        description: "Gender of the user"
+      - name: state
+        description: "State where the user resides"
+      - name: street_address
+        description: "Street address of the user"
+      - name: postal_code
+        description: "Postal code of the user’s address"
+      - name: city
+        description: "City where the user resides"
+      - name: country
+        description: "Country where the user resides"
+      - name: latitude
+        description: "Latitude of the user's location"
+      - name: longitude
+        description: "Longitude of the user's location"
+      - name: traffic_source
+        description: "Source of traffic for the user's visit"
+      - name: created_at
+        description: "Timestamp when the user was created"
+
+  - name: distribution_centers
+    description: "Details of distribution centers"
+    columns:
+      - name: id
+        description: "Unique identifier for the distribution center"
+      - name: name
+        description: "Name of the distribution center"
+      - name: latitude
+        description: "Latitude of the distribution center"
+      - name: longitude
+        description: "Longitude of the distribution center"
+
+  - name: events
+    description: "User events and interactions"
+    columns:
+      - name: id
+        description: "Unique identifier for the event"
+      - name: user_id
+        description: "Identifier for the user who generated the event"
+      - name: sequence_number
+        description: "Sequence number of the event"
+      - name: session_id
+        description: "Session identifier"
+      - name: created_at
+        description: "Timestamp when the event was created"
+      - name: ip_address
+        description: "IP address of the user"
+      - name: city
+        description: "City from which the event originated"
+      - name: state
+        description: "State from which the event originated"
+      - name: postal_code
+        description: "Postal code from which the event originated"
+      - name: browser
+        description: "Browser used by the user"
+      - name: traffic_source
+        description: "Source of traffic for the event"
+      - name: uri
+        description: "URI of the page where the event occurred"
+      - name: event_type
+        description: "Type of the event"
+
+  - name: inventory_items
+    description: "Details of inventory items"
+    columns:
+      - name: id
+        description: "Unique identifier for the inventory item"
+      - name: product_id
+        description: "Identifier for the product"
+      - name: created_at
+        description: "Timestamp when the inventory item was created"
+      - name: sold_at
+        description: "Timestamp when the inventory item was sold"
+      - name: cost
+        description: "Cost of the inventory item"
+      - name: product_category
+        description: "Category of the product"
+      - name: product_name
+        description: "Name of the product"
+      - name: product_brand
+        description: "Brand of the product"
+      - name: product_retail_price
+        description: "Retail price of the product"
+      - name: product_department
+        description: "Department of the product"
+      - name: product_sku
+        description: "SKU of the product"
+      - name: product_distribution_center_id
+        description: "Distribution center ID for the product"
+
+  - name: orders_items
+    description: "Details of items in orders"
+    columns:
+      - name: id
+        description: "Unique identifier for the order item"
+      - name: order_id
+        description: "Identifier for the order"
+      - name: user_id
+        description: "Identifier for the user who placed the order"
+      - name: product_id
+        description: "Identifier for the product"
+      - name: inventory_item_id
+        description: "Identifier for the inventory item"
+      - name: status
+        description: "Current status of the order item"
+      - name: created_at
+        description: "Timestamp when the order item was created"
+      - name: shipped_at
+        description: "Timestamp when the order item was shipped"
+      - name: delivered_at
+        description: "Timestamp when the order item was delivered"
+      - name: returned_at
+        description: "Timestamp when the order item was returned"
+      - name: sale_price
+        description: "Sale price of the order item"
+
+  - name: products
+    description: "Product details"
+    columns:
+      - name: id
+        description: "Unique identifier for the product"
+      - name: cost
+        description: "Cost of the product"
+      - name: category
+        description: "Category of the product"
+      - name: name
+        description: "Name of the product"
+      - name: brand
+        description: "Brand of the product"
+      - name: retail_price
+        description: "Retail price of the product"
+      - name: department
+        description: "Department of the product"
+      - name: sku
+        description: "SKU of the product"
+      - name: distribution_center_id
+        description: "Distribution center ID for the product"
+
